syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.iammikrostoritve";
option java_outer_classname = "RecordGrpcProto";

import "common.proto";
import "artist.proto";
import "label.proto";

service RecordGrpcService {
    rpc GetAll (Empty) returns (stream RecordProto) {}
    rpc GetById (RecordIdProto) returns (RecordProto) {}
    rpc Insert (InsertRecordProto) returns (Empty) {}
    rpc UpdateQuantity (UpdateQuantityRequestProto) returns (Empty) {}
    rpc UpdatePrice (UpdatePriceRequestProto) returns (Empty) {}
    rpc Delete (RecordIdProto) returns (Empty) {}
}

message RecordProto {
    string id = 1;
    string title = 2;
    ArtistProto artist = 3;
    string genre = 4;
    string style = 5;
    string releaseDate = 6;
    LabelProto label = 7;
    string country = 8;
    double price = 9;
    int32 quantity = 10;
}

message InsertRecordProto {
    string title = 1;
    string artistId = 2;
    string genre = 3;
    string style = 4;
    string releaseDate = 5;
    string labelId = 6;
    string country = 7;
    double price = 8;
    int32 quantity = 9;
}

message RecordIdProto {
    string id = 1;
}

message UpdateQuantityRequestProto {
    string id = 1;
    int32 quantity = 2;
}

message UpdatePriceRequestProto {
    string id = 1;
    double price = 2;
}
